@@ -5,9 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_white">
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar_appointments_blue" />
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefresh"
         android:layout_width="0dp"
@@ -16,7 +14,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:paddingTop="60dp"
         >
 
         <androidx.recyclerview.widget.RecyclerView
@@ -27,6 +24,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="12dp"
             android:clipToPadding="true"
+            android:paddingTop="60dp"
             android:nestedScrollingEnabled="false"
             android:paddingBottom="18dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -37,5 +35,7 @@
             tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:orientation="vertical" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_appointments_blue" />
 </androidx.constraintlayout.widget.ConstraintLayout>
